force-app/main/default/objects/Contact/fields/DripCampaign__c.field-meta.xml
<CustomField>
    <fullName>DripCampaign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DripCampaign</label>
    <type>Checkbox</type>
</CustomField>