force-app/main/default/objects/Contact/fields/Feedback_Rating_Count__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Rating_Count__c</fullName>
    <label>Feedback Rating Count</label>
    <summaryForeignKey>Feedback__c.Nominator__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>