force-app/main/default/objects/Contact/fields/HR__c.field-meta.xml
<CustomField>
    <fullName>HR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HR</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>