force-app/main/default/objects/Contact/fields/MVP_Count__c.field-meta.xml
<CustomField>
    <fullName>MVP_Count__c</fullName>
    <label>MVP Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>