force-app/main/default/objects/Contact/fields/No_Dreamforce_Attended__c.field-meta.xml
<CustomField>
    <fullName>No_Dreamforce_Attended__c</fullName>
    <label>No. Dreamforce Attended</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>