force-app/main/default/objects/Contact/fields/Nomination_Count__c.field-meta.xml
<CustomField>
    <fullName>Nomination_Count__c</fullName>
    <label>Nomination Count</label>
    <summaryForeignKey>Feedback__c.Nominator__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>