force-app/main/default/objects/Contact/fields/TZ_Answers_Last_Year__c.field-meta.xml
<CustomField>
    <fullName>TZ_Answers_Last_Year__c</fullName>
    <label>TZ Answers (Last Year)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>