force-app/main/default/objects/Contact/fields/TZ_Ideas_All_Time__c.field-meta.xml
<CustomField>
    <fullName>TZ_Ideas_All_Time__c</fullName>
    <label>TZ Ideas (All Time)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>