force-app/main/default/objects/Contact/fields/TZ_Ideas_Last_Year__c.field-meta.xml
<CustomField>
    <fullName>TZ_Ideas_Last_Year__c</fullName>
    <label>TZ Ideas (Last Year)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>